--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,13 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
+  height: max-content;
+  background: #7a7a7a;  /* fallback for old browsers */
+background: linear-gradient(to bottom, #d1d1d1, #969696);
+margin:0;
+padding:0;
+  display:flex;
+  align-items: center;
+  justify-content: center;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -10,7 +16,11 @@ a {
   color: inherit;
   text-decoration: none;
 }
-
-* {
-  box-sizing: border-box;
+@media(max-width: 400px) {
+  body{
+    width: 100vw;
+margin:0;
+padding:0;
+  }
 }
+
